Add everything for assignment 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ include(./coconut/coconut.cmake)
 add_executable(civicc ${FLEX_CivicLexer_OUTPUTS} ${BISON_CivicParser_OUTPUTS}
     src/main.c src/print/print.c src/scanparse/scanParse.c
     src/global/globals.c src/global/globals.h
+    src/count/trav_countbinops.c src/eval/trav_eval.c
+    src/count/trav_countidentifiers.c src/opts/trav_strengthreduction.c
 
     # Youre free to remove the demo directory and these entries.
     src/demo/opt_sub.c src/demo/sum_ints.c src/demo/rename_identifiers.c
