--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,11 @@ add_executable(civicc ${FLEX_CivicLexer_OUTPUTS} ${BISON_CivicParser_OUTPUTS}
     src/main.c src/print/print.c src/scanparse/scanParse.c
     src/global/globals.c src/global/globals.h
     src/analysis/syntacticanalysis.c
+        src/variables/variable.c
+        src/variables/variable.h
+        src/variables/vartablestack.c
+        src/variables/vartablestack.h
+        src/common.h
 )
 
 target_compile_options(civicc PRIVATE
