Initial functional static analysis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,21 +32,14 @@ add_executable(civicc ${FLEX_CivicLexer_OUTPUTS} ${BISON_CivicParser_OUTPUTS}
     src/main.c src/print/print.c src/scanparse/scanParse.c
     src/global/globals.c src/global/globals.h
     src/analysis/contextanalysis.c
-        src/variables/variable.c
-        src/variables/variable.h
-        src/variables/vartablestack.c
-        src/variables/vartablestack.h
-        src/common.h
-        src/analysis/argstack.c
-        src/analysis/argstack.h
-        src/symbol/symbol.c
-        src/symbol/symbol.h
-        src/symbol/table.c
-        src/symbol/table.h
-        src/symbol/tablestack.c
-        src/symbol/tablestack.h
-        src/analysis/idlist.c
-        src/analysis/idlist.h
+    src/common.h
+    src/analysis/argstack.c src/analysis/argstack.h
+    src/symbol/symbol.c src/symbol/symbol.h
+    src/symbol/table.c src/symbol/table.h
+    src/symbol/tablestack.c src/symbol/tablestack.h
+    src/analysis/idlist.c src/analysis/idlist.h
+    src/analysis/dimslist.c src/analysis/dimslist.h
+    src/analysis/dimsliststack.c src/analysis/dimsliststack.h
 )
 
 target_compile_options(civicc PRIVATE
