Update CMakeLists.txt for bytecode generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,17 +29,20 @@ include(./coconut/coconut.cmake)
 
 # Whenever you add a file, add it here too.
 add_executable(civicc ${FLEX_CivicLexer_OUTPUTS} ${BISON_CivicParser_OUTPUTS}
-    src/main.c src/print/print.c src/scanparse/scanParse.c
-    src/global/globals.c src/global/globals.h
-    src/analysis/contextanalysis.c
-    src/common.h
-    src/analysis/argstack.c src/analysis/argstack.h
-    src/symbol/symbol.c src/symbol/symbol.h
-    src/symbol/table.c src/symbol/table.h
-    src/symbol/tablestack.c src/symbol/tablestack.h
-    src/analysis/idlist.c src/analysis/idlist.h
-    src/analysis/dimslist.c src/analysis/dimslist.h
-    src/analysis/dimsliststack.c src/analysis/dimsliststack.h
+        src/main.c src/print/print.c src/scanparse/scanParse.c
+        src/global/globals.c src/global/globals.h
+        src/analysis/contextanalysis.c
+        src/common.h
+        src/analysis/argstack.c src/analysis/argstack.h
+        src/symbol/symbol.c src/symbol/symbol.h
+        src/symbol/table.c src/symbol/table.h
+        src/symbol/tablestack.c src/symbol/tablestack.h
+        src/analysis/idlist.c src/analysis/idlist.h
+        src/analysis/dimslist.c src/analysis/dimslist.h
+        src/analysis/dimsliststack.c src/analysis/dimsliststack.h
+        src/bytecode/bytecode.c
+        src/bytecode/asm.c src/bytecode/asm.h
+        src/bytecode/writer.c src/bytecode/writer.h
 )
 
 target_compile_options(civicc PRIVATE
