[BROKEN] Transfer progress to computer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(civicc ${FLEX_CivicLexer_OUTPUTS} ${BISON_CivicParser_OUTPUTS}
         src/bytecode/bytecode.c
         src/bytecode/asm.c src/bytecode/asm.h
         src/bytecode/writer.c src/bytecode/writer.h
+        src/symbol/scopetree.c src/symbol/scopetree.h
 )
 
 target_compile_options(civicc PRIVATE
